--- a/wedding-invitation/index.html
+++ b/wedding-invitation/index.html
@@ -124,7 +124,7 @@
         <div class="pt-10 mb-8 z-10">
             <!-- Placeholder for Ganesha Photo -->
             <img src="lord.png" alt="Lord Ganesha Invocation" class="w-20 h-24 mx-auto object-cover rounded-full border-2 border-secondary-color shadow-lg">
-            <p class="text-sm mt-2 text-gold heading-font font-medium tracking-widest">|| Vakratunda Mahakaya ||</p>
+            <p class="text-sm mt-2 text-white heading-font font-medium tracking-widest">|| Vakratunda Mahakaya ||</p>
         </div>
 
         <!-- Gold decorative accents -->
@@ -253,3 +253,4 @@
     </script>
 </body>
 </html>
+
